~~ 2008.11 TEST ~~
- Markdown/Content Submission removed
- New layout with, fixed templates, better HTML and CSS
- Fixed password reset and password change broken for no reason on django 1.0 / python 2.6

~~ 2008.09 STABLE ~~
- German Translation
- Django 1.0 reset password fixed
- Translations updates

~~ 2008.09 Test 4 ~~
- fixed link to moved topic
- Django 1.0 compatibility

~~ 2008.07 Test 3 ~~
- New look & feel of the pagestats application
- Updated Polish translations
- CSS/JS/HTML cleaning of the layout, CBC tags etc
- Help Page
- Fixes and enchantments submited by users :)

~~ 2008.07 Test 2 ~~
- FORUM: Solve/Unsolve topic
- FORUM: forum moderators, topic prefixes
- FORUM: added postmarkup as BBCode parser
- FORUM: anonymous posting per forum
- CONTENT: "what's new?" feed of new and updated pages and posts.
- CONTENT: comments as forum topics
- CONTENT: initial content submission support
- DIAMANDA: removed stripogram dependency
- USERPANEL: removed graphic captcha
- USERPANEL: added OpenID support


~~ 2008.04 Test 1 ~~
- User Interface changes, fixes and improvements
- Rewritten userpanel app to use django auth views
- Updated code to be compatible with latest Django-SVN
- Migrated from oldforms to newforms in forum and boxcomments
