@@ -1,4 +1,5 @@
 ~~ 2008.11 TEST ~~
+- jQuery scripts replaced by lighter simple JS scripts (used by content bbcode)
 - Markdown/Content Submission removed
 - New layout with, fixed templates, better HTML and CSS
 - Fixed password reset and password change broken for no reason on django 1.0 / python 2.6
